# rdk-emulator-iarmmgrs

./: .gitattributes  Makefile.am  configure.ac
generic/: Makefile  rdk_build.sh
ir/: Makefile.am  plat-ir.c
power/: Makefile.am  plat-power.c
